fix: home page taking overflow and navbar

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,19 +1,15 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-body {
-  background: #000;
-}
-canvas {
-  display: block;
-}
 .title {
   color: #fff;
-  text-align: center;
+}
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .homeContainer {
-  position: absolute;
+  position: relative;
+  text-align: center;
   top: 0;
   width: 100%;
   height: 100%;
